# NeuralField

./: README.md  main.py  poetry.toml  pyproject.toml  requirements.txt
neuralfield/data/: report.json
neuralfield/interface/: const.py  main.py  main_2.py  test.py
neuralfield/network/unet_v1/: NeuralNetwork.ipynb  color_selection.py
neuralfield/network/vit/: custom_segformer.ipynb  main.py  maine_2.py  reqirements.txt  test.py  vit.ipynb  vit_2.ipynb  vit_rgb.ipynb  vit_rgb.py  vit_rgb_segmentation copy.ipynb  vit_rgb_segmentation.ipynb
neuralfield/network/vit/runs/vit_rgb/: train.csv
neuralfield/script/: pred_proc.py
