[tool.poetry]
name = "neuralfield"
version = "0.1.0"
description = ""
authors = ["midvaz <mi28df@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
imutils = "^0.5.4"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
glob2 = "^0.7"
pillow = "^11.0.0"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
