[project]
name = "neuralfield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.28.3",
    "flet-desktop>=0.28.3",
    "imutils>=0.5.4",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "scikit-image>=0.25.2",
]
