[project]
name = "neuralfield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "flet>=0.28.3",
    "flet-desktop>=0.28.3",
    "geopandas>=1.1.0",
    "imutils>=0.5.4",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "shapely>=2.1.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
